alterando rotas no servidor e atualizando o readme :tada:

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -131,7 +131,7 @@
                 <input type="password" class="password" id="password" name="password" placeholder="Insira a senha">
                 <input type="submit" value="Logar">
             </form>
-            <a href="/admin/prof/login">Sou professor</a>
+            <a href="auth/professors/login">Sou professor</a>
         </div>
     </div>
 </body>
